--- a/posts/templates/post_detail.html
+++ b/posts/templates/post_detail.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Detail</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+
+{% block head_title%} Detail {% endblock head_title%}
+
+
+{% block content%}
+
 <ol>
-	<li>{{instance.id}}</li>
+	<li>{{instance.id}}</li> 
 	<li>{{instance.title}}</li>
 	<li>{{instance.content}}</li>
 
 </ol>
-<a href="{% url 'list' %}"> Go Back to List</a>
+<a href="{% url 'posts:list' %}"> Go Back to List</a>
 
-
-</body>
-</html>
+{% endblock content%}
