--- a/posts/templates/post_list.html
+++ b/posts/templates/post_list.html
@@ -1,21 +1,51 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>List</title>
-</head>
-<body>
+{% extends "base.html" %}
 
 
-<h1>List</h1>
-
-<ol>
-{% for x in list %}
+{% block head_title%} List {% endblock head_title%}
 
 
-<a href="{% url 'detail' post_id=x.id %}"><li>{{x.title}}</li></a>
+{% block content%}
 
+
+<div class="row">
+{% for x in post_list %}
+	<div class="col-sm-6">
+		 <div class="thumbnail">
+         	{% if x.image %}
+         		<img src="{{x.image.url}}" class="img-responsive"> 
+         	{% endif %}
+	     	 <div class="caption">
+	        	<h3>{{x.title}}<small>{{x.timestamp|timesince}} ago</small></h3>
+	       	 	<p>{{x.content|linebreaks|truncatechars:10}}</p>
+	       	 	<p>
+	       	 		<a href="{{x.get_absolute_url}}" class="btn btn-primary" >View</a>
+	       	 		<a href="{% url 'posts:update' post_id=x.id %}" class="btn btn-success" >Edit</a>
+	       	 		<a href="{% url 'posts:delete' post_id=x.id %}" class="btn btn-danger" >Delete</a>
+	       	 	</p>
+	      	</div>
+	    </div>
+	</div>
 {% endfor %}
-</ol>
+</div>
 
-</body>
-</html>
+<div class="pagination">
+    <span class="step-links">
+        {% if post_list.has_previous %}
+            <a href="?page={{ post_list.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ post_list.number }} of {{ post_list.paginator.num_pages }}
+        </span>
+
+        {% if post_list.has_next %}
+            <a href="?page={{ post_list.next_page_number }}">next</a>
+        {% endif %}
+    </span>
+</div>
+
+
+
+{% endblock content%}
+
+	
